I commented the code I do not need

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript">
-    function Card(r, s) {
+  /*  function Card(r, s) {
       this.rank = r;
       this.suit = s;
       this.toHTML = function() {
@@ -83,7 +83,7 @@
         });
       });
 
-    }
+    } */   // I am trying to use just the shuffle to sort the card images
 
     var shuffle = function(m) {
       var rand, $rand;
